Fix styles for login and sign up
Add code for fixing the misaligned signup button and keeping the login
button in place

--- a/UI/styles.css
+++ b/UI/styles.css
@@ -67,9 +67,12 @@ a:hover {
 
 .btn-form-submit {
     margin-top: 15%;
-    margin-left: 35%;
     width: 30%;
     color: rgba(94, 99, 255, 1)
+}
+
+.btn-login-submit {
+    margin-left: 35%;
 }
 
 .login-wrapper {
